<resources>
    <string name="app_name">Retrofit</string>
    <string name="one">TextOne</string>
    <string name="MainTitle">Just Title</string>
    <string name="two">TextTwo</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="posts_fragment">Posts Fragment</string>
    <string name="photos_fragment">Photos Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Main">Main</string>
    <string name="photos">Photos</string>
    <string name="font">float</string>
    <string name="button">Create</string>
    <string name="Add">Add Item</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="item">Item</string>
    <string name="One">One</string>
    <string name="Just_animals">Just animals</string>
    <string name="star">star</string>
    <string name="todo">TODO</string>
    <string name="accept">Yes</string>
    <string name="delete_post_title">Delete post?</string>
    <string name="Cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="empty_item">Поле обов\'язкове для заповнення</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
</resources>