<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:id="@+id/containerNew"
    android:background="@color/colorNice"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerNewOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp">

        <TextView
            android:id="@+id/one_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/one"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/two_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/two"
            android:textColor="@color/colorRed"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one_title" />

        <ImageView
            android:id="@+id/view_pen"
            android:layout_width="19dp"
            android:layout_height="18dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toStartOf="@+id/view_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pen" />

        <ImageView
            android:id="@+id/view_delete"
            android:layout_width="20dp"
            android:layout_height="18dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/delete" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>